@@ -1,5 +1,6 @@
 2008-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* tests/busy.test: default wait cursor on windows is 'wait'
 	* win/tkWinFont.c: const fixes for the windows code.
 
 2008-11-02  Jan Nijtmans  <nijtmans@users.sf.net>
